modified suspendTransactions in RewardBatchServiceImpl